# Brain-Games

./: .gitignore  Makefile  README.md  game1.cast  game2.cast  game3.cast  game4.cast  game5.cast  pyproject.toml
brain_games/: cli.py  game1.py
brain_games/engine/: engine.py  game_runner.py
brain_games/games/: calculator_game.py  game1.py  game2.py  game3.py  game4.py  game5.py  gcd_game.py  is_even_game.py  is_prime_game.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
